--- a/client/index.html
+++ b/client/index.html
@@ -21,12 +21,14 @@
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">LoopBack Angular example</a>
+      <a class="navbar-brand" ui-sref="todo">Todos</a>
+      <a class="navbar-brand" ui-sref="category">Categories</a>
+
     </div>
   </div>
 </div>
 
-<div class="container">
+<div class="container" ng-controller="TodoController">
   <div ui-view></div>
 </div>
 
@@ -38,5 +40,6 @@
 <script src="js/services/lb-services.js"></script>
 <script src="js/app.js"></script>
 <script src="js/controllers/todo.js"></script>
+<script src="js/controllers/category.js"></script>
 </body>
 </html>
