--- a/client/index.html
+++ b/client/index.html
@@ -39,6 +39,7 @@
 <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="js/services/lb-services.js"></script>
 <script src="js/app.js"></script>
+<script src="js/services/category-services.js"></script>
 <script src="js/controllers/todo.js"></script>
 <script src="js/controllers/category.js"></script>
 </body>
