--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,8 @@
   <title>LoopBack Angular example</title>
 
   <!-- Bootstrap -->
-  <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
   <link href="css/styles.css" rel="stylesheet">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -18,16 +19,35 @@
   <![endif]-->
 </head>
 <body ng-app="app">
-<div class="navbar" role="navigation">
-      <div class="navbar-inner">
-        <ul class="nav">
-            <li ui-sref-active="active"><a ui-sref="todo">Todos</a></li>
-            <li ui-sref-active="active"><a ui-sref="category">Categories</a></li>
-        </ul>
-      </div>
-</div>
 
 <div class="container">
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="active" ui-sref-active="active"><a ui-sref="todo">Todos <span class="sr-only">(current)</span></a></li>
+          <li ui-sref-active="active"><a ui-sref="category">Categories</a></li>
+        </ul>
+        <form class="navbar-form navbar-left">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
   <div ui-view></div>
 </div>
 
