--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
 <body ng-app="app">
 
 <div class="container">
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -39,12 +39,6 @@
           <li class="active" ui-sref-active="active"><a ui-sref="todo">Todos <span class="sr-only">(current)</span></a></li>
           <li ui-sref-active="active"><a ui-sref="category">Categories</a></li>
         </ul>
-        <form class="navbar-form navbar-left">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
