--- a/client/index.html
+++ b/client/index.html
@@ -53,7 +53,9 @@
 <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="js/services/lb-services.js"></script>
 <script src="js/app.js"></script>
+<script src="js/services/auth.js"></script>
 <script src="js/controllers/todo.js"></script>
 <script src="js/controllers/category.js"></script>
+<script src="js/controllers/auth.js"></script>
 </body>
 </html>
