--- a/client/index.html
+++ b/client/index.html
@@ -39,6 +39,9 @@
           <li class="active" ui-sref-active="active"><a ui-sref="todo">Todos <span class="sr-only">(current)</span></a></li>
           <li ui-sref-active="active"><a ui-sref="category">Categories</a></li>
         </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li ng-if="currentUser"><a ui-sref="logout">Logged in as: {{currentUser.email}}</a></li>
+        </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
