--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+  <link href="vendor/angular-tooltips/dist/angular-tooltips.min.css" rel="stylesheet" type="text/css" />
   <link href="css/styles.css" rel="stylesheet">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -40,7 +40,7 @@
           <li ui-sref-active="active"><a ui-sref="category">Categories</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li ng-if="currentUser"><a ui-sref="logout">Logged in as: {{currentUser.email}}</a></li>
+          <li ng-if="currentUser"><a ui-sref="logout" tooltips tooltip-template="Log out?">Logged in as: {{currentUser.email}}</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -54,6 +54,7 @@
 <script src="vendor/angular-messages/angular-messages.js"></script>
 <script src="vendor/angular-resource/angular-resource.js"></script>
 <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
+<script src="vendor/angular-tooltips/dist/angular-tooltips.js"></script>
 <script src="js/services/lb-services.js"></script>
 <script src="js/app.js"></script>
 <script src="js/services/auth.js"></script>
