--- a/client/index.html
+++ b/client/index.html
@@ -55,6 +55,7 @@
 <script src="vendor/angular-resource/angular-resource.js"></script>
 <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="vendor/angular-tooltips/dist/angular-tooltips.js"></script>
+<script src="https://rawgithub.com/gsklee/ngStorage/master/ngStorage.js"></script>
 <script src="js/services/lb-services.js"></script>
 <script src="js/app.js"></script>
 <script src="js/services/auth.js"></script>
