--- a/client/index.html
+++ b/client/index.html
@@ -45,7 +45,15 @@
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
-  <div ui-view></div>
+  <dialog></dialog>
+  <div ui-view>
+  </div>
+</div>
+<div class="container">
+  <div class="col-md-6 col-md-offset-3">
+    <div><span>&nbsp</span></div>
+    <notification-list></notification-list>
+  </div>
 </div>
 
 <script src="vendor/jquery/dist/jquery.js"></script>
@@ -60,8 +68,15 @@
 <script src="js/services/lb-services.js"></script>
 <script src="js/app.js"></script>
 <script src="js/services/auth.js"></script>
+<script src="js/services/messaging.js"></script>
+<script src="js/services/events.js"></script>
+<script src="js/services/errors.js"></script>
+<script src="js/services/dialog.js"></script>
 <script src="js/controllers/todo.js"></script>
 <script src="js/controllers/category.js"></script>
 <script src="js/controllers/auth.js"></script>
+<script src="js/directives/notificationList/notificationList.js"></script>
+<script src="js/directives/dialog/dialog.js"></script>
+
 </body>
 </html>
