--- a/client/index.html
+++ b/client/index.html
@@ -10,12 +10,14 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="vendor/angular-tooltips/dist/angular-tooltips.min.css" rel="stylesheet" type="text/css" />
   <link href="css/styles.css" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.5/jspdf.min.js"></script>
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+
   <![endif]-->
 </head>
 <body ng-app="app">
@@ -72,6 +74,7 @@
 <script src="js/services/events.js"></script>
 <script src="js/services/errors.js"></script>
 <script src="js/services/dialog.js"></script>
+<script src="js/services/pdf.js"></script>
 <script src="js/controllers/todo.js"></script>
 <script src="js/controllers/category.js"></script>
 <script src="js/controllers/auth.js"></script>
