--- a/client/tailwind.html
+++ b/client/tailwind.html
@@ -12,13 +12,13 @@
 <div class="bg-white">
   <div class="container mx-auto flex items-center py-4">
     <nav class="w-2/5">
-      <a href="#" class="text-grey-darker text-sm mr-4 font-semibold pb-6 hover:text-teal"><i class="fa fa-home fa-lg"></i> Home</a>
-      <a href="#" class="text-grey-darker text-sm mr-4 font-semibold pb-6"><i class="fa fa-bolt fa-lg"></i> Moments</a>
-      <a href="#" class="text-grey-darker text-sm mr-4 font-semibold pb-6"><i class="fa fa-bell fa-lg"></i> Notification</a>
-      <a href="#" class="text-grey-darker text-sm mr-4 font-semibold pb-6"><i class="fa fa-envelope fa-lg"></i> Messages</a>
+      <a href="#" class="top-nav-item"><i class="fa fa-home fa-lg"></i> Home</a>
+      <a href="#" class="top-nav-item"><i class="fa fa-bolt fa-lg"></i> Moments</a>
+      <a href="#" class="top-nav-item"><i class="fa fa-bell fa-lg"></i> Notification</a>
+      <a href="#" class="top-nav-item"><i class="fa fa-envelope fa-lg"></i> Messages</a>
     </nav>
-    <div class="w-1/5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, quas.</div>
-    <div class="w-2/5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, reiciendis!</div>
+    <div class="w-1/5">Lorem.</div>
+    <div class="w-2/5">Lorem!</div>
   </div>
 </div>
 
