--- a/client/tailwind.html
+++ b/client/tailwind.html
@@ -17,10 +17,33 @@
       <a href="#" class="top-nav-item"><i class="fa fa-bell fa-lg"></i> Notification</a>
       <a href="#" class="top-nav-item"><i class="fa fa-envelope fa-lg"></i> Messages</a>
     </nav>
-    <div class="w-1/5">Lorem.</div>
-    <div class="w-2/5">Lorem!</div>
+    <div class="w-1/5 text-center"><a href="#"><i class="fa fa-twitter fa-lg text-blue"></i></a></div>
+    <div class="w-2/5 flex justify-end">
+      <div class="mr-4 relative">
+        <input type="text" class="bg-grey-lighter h-8 px-4 py-2 text-xs w-48 rounded-full" placeholder="Search Twitter">
+        <span class="flex items-center absolute pin-r pin-y mr-3"><i class="fa fa-search text-grey"></i></span>
+      </div>
+      <div class="mr-4"><a href="#"><img src="https://pbs.twimg.com/profile_images/1587743212/IMG_normal.jpg" alt="avatar" class="h-8 w-8 rounded-full"></a></div>
+      <div><button class="bg-teal hover:bg-teal-dark text-white font-medium py-2 px-4 rounded-full">Tweet</button></div>
+    </div>
   </div>
 </div>
+<div class="hero h-64 bg-cover h-112"></div>
 
+<div class="bg-white shadow">
+  <div class="container mx-auto flex items-center">
+    <div class="w-1/4">Lorem ipsum dolor sit amet.
+    </div>
+    <div class="w-1/2">Lorem ipsum dolor sit amet.</div>
+    <div class="w-1/4 flex justify-end items-center">
+      <div class="mr-6">
+        <button class="bg-teal hover:bg-teal-dark text-white font-medium py-2 px-4 rounded-full">Following</button>
+      </div>
+      <div>
+        <a href="#" class="text-grey-dark"><i class="fa fa-ellipsis-v fa-lg"></i></a>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
