--- a/client/tailwind.html
+++ b/client/tailwind.html
@@ -30,17 +30,45 @@
 </div>
 <div class="hero h-64 bg-cover h-112"></div>
 
-<div class="bg-white shadow">
+<div class="bg-white shadow py-3">
   <div class="container mx-auto flex items-center">
     <div class="w-1/4">Lorem ipsum dolor sit amet.
     </div>
-    <div class="w-1/2">Lorem ipsum dolor sit amet.</div>
+    <div class="w-1/2">
+      <ul class="list-reset flex">
+        <li class="text-center py-3 px-4 border-b-2 border-solid border-teal">
+          <a href="#" class="text-grey-darker hover:no-underline">
+          <div class="text-sm font-bold tracking-tight mb-1">Tweets</div>
+          <div class="text-lg tracking-tight font-bold text-teal ">60</div>
+        </a></li>
+        <li class="text-center py-3 px-4 border-b-2 border-solid">
+          <a href="#" class="text-grey-darker hover:no-underline">
+            <div  class="text-sm font-bold tracking-tight mb-1">Following</div>
+            <div class="text-lg tracking-tight font-bold text-teal ">4</div>
+          </a></li>
+        <li class="text-center py-3 px-4 border-b-2 border-solid">
+          <a href="#"  class="text-grey-darker hover:no-underline">
+            <div  class="text-sm font-bold tracking-tight mb-1">Followers</div>
+            <div class="text-lg tracking-tight font-bold text-teal ">3,810</div>
+          </a></li>
+        <li class="text-center py-3 px-4 border-b-2 border-solid">
+          <a href="#"  class="text-grey-darker hover:no-underline">
+            <div  class="text-sm font-bold tracking-tight mb-1">Likes</div>
+            <div class="text-lg tracking-tight font-bold text-teal ">9</div>
+          </a></li>
+        <li class="text-center py-3 px-4 border-b-2 border-solid">
+          <a href="#"  class="text-grey-darker hover:no-underline">
+            <div  class="text-sm font-bold tracking-tight mb-1">Moments</div>
+            <div class="text-lg tracking-tight font-bold text-teal ">1</div>
+          </a></li>
+      </ul>
+    </div>
     <div class="w-1/4 flex justify-end items-center">
       <div class="mr-6">
         <button class="bg-teal hover:bg-teal-dark text-white font-medium py-2 px-4 rounded-full">Following</button>
       </div>
       <div>
-        <a href="#" class="text-grey-dark"><i class="fa fa-ellipsis-v fa-lg"></i></a>
+        <a href="#" class="text-grey-dark"><i class="fa fa-ellipsis-v  fa-lg"></i></a>
       </div>
     </div>
   </div>
