made topbar static

--- a/client/tailwind.html
+++ b/client/tailwind.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 <body class="bg-grey-light font-sans">
-<div class="bg-white">
+<div class="bg-white fixed pin-x z-50" >
   <div class="container mx-auto flex flex-col lg:flex-row items-center py-4">
     <nav class="w-full lg:w-2/5">
       <a href="#" class="top-nav-item"><i class="fa fa-home fa-lg"></i> Home</a>
