--- a/client/index.html
+++ b/client/index.html
@@ -85,6 +85,7 @@
 <script src="js/controllers/auth.js"></script>
 <script src="js/directives/notificationList/notificationList.js"></script>
 <script src="js/directives/dialog/dialog.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.2.2/angular-materialize.min.js"></script>
 
 </body>
 </html>
